- new portfolio entry: golcpp - fixed code display to be more readable

--- a/style/ind.css
+++ b/style/ind.css
@@ -204,14 +204,15 @@ a:visited {
 
 textarea {
    resize: vertical;
-   font-size: 10px;
+   font-size: 12px;
    width: 100%;
    height: 200px;
    background-color  :rgba(0,0,0,0);
-   color: #757575;
+   color: #9c9c9c;
    border: 1px solid #333;
    border-radius: 8px;
    padding: 8px;
+   white-space: pre;
 }
 
 textarea:focus {
@@ -221,6 +222,7 @@ textarea:focus {
 /* width */
 textarea::-webkit-scrollbar {
    width: 6px;
+   height: 6px;
  }
  
  /* Track */
